style.css
html,
body {
    height: 100%;
    margin: 0 !important;
    padding: 0 !important;
}

:root {
    --accent: rgb(51, 149, 215);
    --backgcolor: rgb(230, 242, 250);
    --midcolor: rgb(187, 220, 242);
    --maxHelpHeight: 50px;
    /* --helpOffsetTop: 5000px; 
    --helpOffsetLeft: 2000px; */
}

body {
    display: flex;
    flex-direction: column;
    align-items: center;
    font-family: 'Computer Modern Serif', serif;
    font-feature-settings: "onum" 1;
}

@supports (font-variant-numeric: oldstyle-nums) {
    body {
        font-feature-settings: normal;
        font-variant-numeric: oldstyle-nums;
    }
}

h1 {
    font-weight: bold;
    font-variant: small-caps;
    box-shadow: inset 0 -.1em 0 white, inset 0 -.7em 0 var(--midcolor);
    padding-left: .3em;
    padding-right: .3em;
    /* to make the shadow larger */
    margin-bottom: .5em;
}

.katex {
    font-size: 1em !important;
}

a {
    text-decoration: none;
    color: var(--accent);
}

a:hover {
    text-decoration: underline;
    text-decoration-thickness: thin;
}

.references {
    text-align: left;
}

u {
    font-family: 'Times New Roman';
    font-variant: small-caps;
    font-variant-numeric: oldstyle-nums;
    font-weight: 100;
    text-decoration: none;
    letter-spacing: .04em;
}

ul {
    padding-inline-start: 25px;
    padding-inline-end: 5px;
    margin-block-start: .75em;
    margin-block-end: .75em;
}

code {
    background-color: #dfdfdf;
    border-radius: 4px;
    padding-left: 4px;
    padding-right: 4px;
}

.cool {
    /* box-shadow: inset .4em 0px 0 white, inset 0 -.7em 0 var(--midcolor), .7em .3em 0 -.3em var(--midcolor); */
    box-shadow: inset .4em 0px 0 white, inset 0 -.7em 0 var(--midcolor);
}

ol {
    list-style: lower-roman;
}

blockquote {
    padding-left: 1.5vw;
    padding-right: 1.5vw;
    padding-top: 1vh;
    padding-bottom: 1vh;
    background-color: var(--backgcolor);
}

blockquote p {
    margin-block-start: .25em;
    margin-block-end: .25em;
}

canvas {
    margin: 0;
    padding: 0;
    vertical-align: bottom;
}

.fullscreen {
    overflow: hidden;
}

.fullscreen .content {
    display: none !important;
}

#wrapper {
    display: grid;
    grid-template: "h" 1fr / 1fr;
    justify-content: center;
    align-content: center;
}

#spinnericon {
    grid-area: h;
    display: flex;
    align-items: center;
    justify-content: center;
    visibility: hidden;
}

#spinnericon i {
    font-size: 18pt;
}

#canvas {
    position: relative;
    grid-area: h;
    padding: 0;
    margin: 0;
}

.sized {
    width: 800px;
    max-width: 75vw;
}

#description {
    padding-top: .1em;
    text-align: justify;
}

button {
    font-family: 'Computer Modern Serif', serif;
}

.topleft {
    position: absolute;
    left: 0;
    top: 0;
    /* z-index: 99999; */
}

.bottomright {
    position: absolute;
    right: 0;
    bottom: 0;
    /* z-index: 999999; */
}

.topright {
    position: absolute;
    right: 0;
    top: 0;
}

.bottomleft {
    position: absolute;
    left: 0;
    bottom: 0;
}

#undercanvas {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding-top: 5px;
}

#radiodiv {
    max-width: 85%;
    text-align: center;
}

#radiodiv input[type="radio"] {
    display: none;
}

#radiodiv label {
    display: inline-block;
    background-color: #f0f0f0;
    padding: 4px 11px;
    cursor: pointer;
}

#radiodiv input[type="radio"]:checked+label {
    background-color: #d8d8d8;
}

#helptext {
    background-color: var(--backgcolor);
    font-size: smaller;
    transition: all 0.5s ease;
    will-change: transform;
    z-index: 2;
}

#helptextcontent {
    opacity: 1;
    transition: all .4s ease;
}

.notvisible {
    opacity: 0 !important;
}

.mainbar {
    margin-top: 5px;
    border-radius: 5px;
    width: 650px;
    max-width: 100%;
    -webkit-transform: scaleY(0);
    transform: scaleY(0);
    animation: scale-up .5s linear both;
}

.openheight {
    -webkit-transform: scaleY(1);
    transform: scaleY(1);
    -webkit-transform-origin: 0% 100%;
    transform-origin: 0% 100%;
    visibility: visible !important;
}

.infobutton {
    display: block;
    height: 22px;
    width: 22px;
    padding: 0;
    border-radius: 50%;
    border: 1px solid lightgray;
    outline: none;
    color: rgb(85, 85, 85);
    -webkit-transition-duration: 500ms;
    -o-transition-duration: 500ms;
    -moz-transition-duration: 500ms;
    transition-duration: 500ms;
}

.infobutton i {
    font-size: smaller;
}

.infobutton:hover {
    cursor: pointer;
    background-color: var(--backgcolor);
    color: #ffffff;
}

.buttonon {
    background-color: var(--backgcolor);
    border: 1px solid var(--midcolor);
    color: #fff;
}

.buttonon:hover {
    background-color: rgb(239, 239, 239);
    border: 1px solid lightgray;
    color: rgb(85, 85, 85);
}

#footer {
    text-align: center;
    margin-top: 4em;
    margin-bottom: 5em;
    font-size: small;
    color: rgb(160, 160, 160);
    display: grid;
    /* grid-template-columns: auto auto auto; */
    grid-template-columns: repeat(3, 1fr);
}

.footerleft {
    text-align: left;
    transition: .5s;
}

.footerleft:hover {
    transform: translate(10px);
}

.footercenter {
    text-align: center;
}

.footerright {
    text-align: right;
    transition: .5s;
}

.footerright:hover {
    transform: translate(-10px);
}

